k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ops-test
  name: ops-test
  namespace: ops-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ops-test
  template:
    metadata:
      labels:
        app: ops-test
    spec:
      containers:
      - image: kiyor/ops-test
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 3
          timeoutSeconds: 3
        name: ops-test
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 10m
            memory: 10Mi
          requests:
            cpu: 10m
            memory: 10Mi
