k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ops-test
  name: ops-test
  namespace: ops-test
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: ops-test
  type: ClusterIP
